# vcgimbal

./: .gitignore  .gitmodules  .releaserc  CHANGELOG.md  CMakeLists.txt  PLATFORM_GUIDE.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: platforms.md  quickstart.md
examples/: example_basic.cpp  servo_lgpio_sweep.py  servo_sweep.py
include/: Gimbal.h  GimbalConfig.h  PWMController.h  PWMControllerPico.h  PWMControllerRPi5.h
scripts/: build.sh  flash.sh  servo_sweep.sh
src/: Gimbal.cpp  PWMControllerPico.cpp  PWMControllerRPi5.cpp
